--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>En la parte de <strong>Administración Trabajadores</strong> podremos mostrar, crear, editar y eliminar  los trabajadores.</p>
         <p>En la parte de <strong>Administración Proveedores</strong> podremos mostrar, crear, editar y eliminar  los proveedores.</p>
         <p>En la parte de <strong>Administración Productos</strong> podremos mostrar, crear, editar y eliminar  los productos.</p>
-        <p>En la parte de <strong>Administración Albaranes</strong> podremos mostrar, crear, editar y eliminar los albaranes.</p>
+        <p>En la parte de <strong>Administración Albaranes</strong> podremos mostrar, crear  y eliminar los albaranes.</p>
       </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
